fix(css): prevent mobile background flickering when scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,7 @@ body {
 }
 
 body {
+  min-height: 100svh;
   min-height: 100vh;
   text-align: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg.jpg);
